--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Kubryk's Home Page</title>
+    <style type="text/css">
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        #wrapper {
+            min-height: 100%;
+        }
+    </style>
+    <!--[if lte IE 6]>
+    <style type="text/css">
+        #container {
+            height: 100%;
+        }
+    </style>
+    <![endif]-->
 </head>
 <body>
-<img src="Picture.jpg" >
+ <div id="wrapper"><img src="Picture.jpg" ></div>
 </body>
 </html>
